fix(material/list): list item truncates on narrow screen widths
Updates fix for Angular Components List component where the list
item truncates on narrow screen widths (ie. mobile screens).
Updates the padding to be more cohesive with previous styling.

Fixes b/291296866

--- a/src/material/list/list.scss
+++ b/src/material/list/list.scss
@@ -162,11 +162,6 @@ a.mdc-list-item--activated {
   }
 }
 
-.mat-mdc-list-item.mdc-list-item--with-leading-avatar.mdc-list-item--with-two-lines
-.mdc-list-item__primary-text::before {
-  height: 25px;
-}
-
 // Increased list item height if it has multiple lines so bottom line doesn't get
 // cut off. Also added padding-bottom so there's space btw the text and the divider.
 .mat-mdc-list-item.mdc-list-item--with-leading-avatar.mdc-list-item--with-two-lines,
@@ -176,12 +171,13 @@ a.mdc-list-item--activated {
 .mat-mdc-list-item.mdc-list-item--with-leading-checkbox.mdc-list-item--with-three-lines,
 .mat-mdc-list-item.mdc-list-item--with-leading-icon.mdc-list-item--with-three-lines {
   height: auto;
-  padding-bottom: 12px;
+  padding-bottom: 16px;
 }
 
 .mat-mdc-list-item.mdc-list-item--with-three-lines,
 .mat-mdc-list-item.mdc-list-item--with-two-lines {
   height: auto;
+  padding: 13px;
   // List item lines must wrap according to GAR 1.18(b). Removing the nowrap and
   // adjusts .mat-mdc-list-item-title.mdc-list-item__primary-text height
   // to accommodate any wrapping text. Fixes: b/247881646.
